--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationCheck.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationCheck.form
@@ -358,6 +358,12 @@
             <dync:render colSpan="1" height="0" multi="false" name="text"/>
             <dync:children/>
           </dync:attribute>
+          <dync:attribute default="" group="加载后事件" id="onSelectRow" name="选择行" value="maindata_onSelectRow(rowid,status,e)">
+            <dync:render colSpan="1" height="0" multi="false" name="event">
+              <dync:item name="param" value="rowid,status,e"/>
+            </dync:render>
+            <dync:children/>
+          </dync:attribute>
         </form:attributes>
       </form:control>
       <form:child xsi:type="form:Field" binding="lineid" id="colJqgrid23" name="序号" customize="true">
@@ -442,7 +448,12 @@
       </form:child>
       <form:child xsi:type="form:Field" binding="audituser" id="audituser" name="审核人" customize="true">
         <form:control type="widget/col_jqgrid">
-          <form:attributes source="widget/col_jqgrid"/>
+          <form:attributes source="widget/col_jqgrid">
+            <dync:attribute default="false" group="表格设置" id="hidden" name="隐藏列" value="true">
+              <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+              <dync:children/>
+            </dync:attribute>
+          </form:attributes>
         </form:control>
         <form:validation/>
       </form:child>
@@ -500,6 +511,10 @@
               <dync:render colSpan="2" height="0" multi="false" name="event">
                 <dync:item name="param" value="cellvalue,options,rowObject"/>
               </dync:render>
+              <dync:children/>
+            </dync:attribute>
+            <dync:attribute default="false" group="表格设置" id="hidden" name="隐藏列" value="true">
+              <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
               <dync:children/>
             </dync:attribute>
           </form:attributes>
@@ -950,9 +965,9 @@ operate_customFormatter:function(cellvalue,options,rowObject){
 	html = &quot;&lt;button style='border:none;background:transparent;' ng-click='functions.showdetail(rowObject)'>点击查看详情&lt;/button>&quot;;
 	return html;
 },
-showdetail:function(rowObject)
+showdetail:function(lineid)
 {
-	var lineid = rowObject.lineid;
+	//var lineid = rowObject.lineid;
 	$http
 	({
         method: 'post',
@@ -1099,7 +1114,7 @@ refreshdata:function(){
 	pos++;
 	rules[pos]={field:&quot;quotationType&quot;,op:&quot;eq&quot;,data:&quot;2&quot;};//查询合同报价单	
 	pos++;
-	rules[pos]={field:&quot;auditUser&quot;,op:&quot;eq&quot;,data:user};
+	rules[pos]={field:&quot;auditUser&quot;,op:&quot;cn&quot;,data:user};
 	pos++;
 	var conditions = { groupOp:&quot;AND&quot;, rules:rules};	
 	if(pos==0){
@@ -1123,5 +1138,12 @@ page_beforeDataSourceLoad:function($params){
         $(this).parent().parent().attr('style','padding-top:0px !important;');
       }
   });	
+},
+
+maindata_onSelectRow:function(rowid,status,e){
+		var lineid=rowid;
+		debugger;
+		if(lineid!=undefined)
+		functions.showdetail(lineid);
 }</form:scripts>
 </form:Form>
