--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotationEdit.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotationEdit.form
@@ -2,43 +2,21 @@
 <form:Form xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dync="http://www.chinacreator.com/platform/mvc/ui/dync" xmlns:form="http://www.chinacreator.com/platform/mvc/form" name="报价单修改" sn="quotationEdit" type="form">
   <form:control type="page/normal">
     <form:attributes source="page/normal">
-      <dync:attribute default="" group="HTML" id="showHead" name="显示标题" value="">
-        <dync:render/>
-        <dync:children/>
-      </dync:attribute>
-      <dync:attribute default="" group="HTML" id="title" name="标题" value="">
-        <dync:render/>
-        <dync:children/>
-      </dync:attribute>
-      <dync:attribute default="" group="HTML" id="desc" name="描述" value="">
-        <dync:render/>
-        <dync:children/>
-      </dync:attribute>
-      <dync:attribute default="false" group="HTML" id="fixedHeight" name="自动高度" value="false">
-        <dync:render/>
-        <dync:children/>
-      </dync:attribute>
-      <dync:attribute default="false" group="HTML" id="compact" name="紧凑页面" value="false">
-        <dync:render/>
-        <dync:children/>
-      </dync:attribute>
-      <dync:attribute default="false" group="HTML" id="dirtyCheck" name="脏检查" value="false">
-        <dync:render/>
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
+        <dync:render colSpan="2" height="0" multi="false" name="event">
+          <dync:item name="param" value="$params"/>
+        </dync:render>
         <dync:children/>
       </dync:attribute>
       <dync:attribute default="" group="事件" id="afterDataSourceLoad" name="数据源加载后" value="page_afterDataSourceLoad()">
-        <dync:render/>
-        <dync:children/>
-      </dync:attribute>
-      <dync:attribute default="" group="事件" id="onload" name="页面加载完成" value="page_onload()">
         <dync:render colSpan="2" height="0" multi="false" name="event">
           <dync:item name="param" value=""/>
         </dync:render>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
+      <dync:attribute default="" group="事件" id="onload" name="页面加载完成" value="page_onload()">
         <dync:render colSpan="2" height="0" multi="false" name="event">
-          <dync:item name="param" value="$params"/>
+          <dync:item name="param" value=""/>
         </dync:render>
         <dync:children/>
       </dync:attribute>
