--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationCheck.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationCheck.form
@@ -1040,6 +1040,9 @@ addrow:function(data,table)
 
 btnrefresh_click:function($event){
 	$view.maindata.refresh();
+	$view.linedata.clearGridData();
+	$view.paydata.clearGridData();
+	$view.chargedata.clearGridData();
 },
 
 btnsubmit_click:function($event){
