--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotationList.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotationList.form
@@ -959,7 +959,7 @@
 }
 ,
 searchdata:function()
-{
+{	functions.showdetail(&quot;&quot;);
 	var tshipper = $view.treeshipper.getTree();
 	var nodes= tshipper.getCheckedNodes(true);	
 	//分供方查询
