--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationList.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationList.form
@@ -1188,6 +1188,9 @@ btncancel_click:function($event){
 },
 
 btnrefresh_click:function($event){
+	$view.linedata.clearGridData();
+	$view.paydata.clearGridData();
+	$view.chargedata.clearGridData();
 	//$view.maindata.refresh();
 	functions.searchdata();
 },
